@@ -24,5 +24,5 @@ dependencies {
 
 jar{
   baseName = 'ToolManCoinAirDropClient'
-  version = '1.0b3'
+  version = '1.0'
 }
