@@ -24,3 +24,5 @@ AIRDROP_SERVER=tmc.kafeiou.pw
 #AirdropServer Port 
 AIRDROP_SERVER_PORT=6878
 
+#Minimum transfer coin
+AIRDROP_TRANSFER_COIN_NUMBER72
