@@ -8,7 +8,7 @@ import java.io.*;
 import java.util.*;
 import java.util.logging.*;
 
-public class AirDropClient implements ActionListener, ItemListener  {
+public class AirDropClient implements ActionListener, ItemListener {
 
 	private static final Logger _log = Logger.getLogger(AirDropClient.class.getName());
 	SystemTray tray = SystemTray.getSystemTray();
@@ -24,10 +24,10 @@ public class AirDropClient implements ActionListener, ItemListener  {
 	private static Vector aMenuVector = new Vector();
 	private static Vector aMenuUrlVector = new Vector();
 	public static String CMD_REG = "REG";
-    public static String MENU_EXIT = "Exit";
-    public static String MENU_DISABLE_NOTIFICATION = "Disable Notification";
-    private boolean bDisableNotification = false;
-    
+	public static String MENU_EXIT = "Exit";
+	public static String MENU_DISABLE_NOTIFICATION = "Disable Notification";
+	private boolean bDisableNotification = false;
+
 	int iFormNum = 0;
 
 	// */
@@ -52,18 +52,18 @@ public class AirDropClient implements ActionListener, ItemListener  {
 			aMenuUrlVector.add(sMenuItemURL[i]);
 		}
 
-		CheckboxMenuItem checkItem = new CheckboxMenuItem (MENU_DISABLE_NOTIFICATION);
+		CheckboxMenuItem checkItem = new CheckboxMenuItem(MENU_DISABLE_NOTIFICATION);
 		checkItem.addItemListener(new ItemListener() {
-            public void itemStateChanged(ItemEvent e) {
-                int cb1Id = e.getStateChange();
-                if (cb1Id == ItemEvent.SELECTED){
-        			bDisableNotification = true;     
-                } else {
-                	bDisableNotification = false;
-                }
-    			System.out.println("bDisableNotification="+bDisableNotification);
-            }
-        });
+			public void itemStateChanged(ItemEvent e) {
+				int cb1Id = e.getStateChange();
+				if (cb1Id == ItemEvent.SELECTED) {
+					bDisableNotification = true;
+				} else {
+					bDisableNotification = false;
+				}
+				System.out.println("bDisableNotification=" + bDisableNotification);
+			}
+		});
 		menu.add(checkItem);
 		// "Exit" menu item
 		menu.addSeparator();
@@ -91,18 +91,18 @@ public class AirDropClient implements ActionListener, ItemListener  {
 		return classString.substring(dotIndex + 1);
 	}
 
-	
 	public void actionPerformed(ActionEvent e) {
 		MenuItem source = (MenuItem) (e.getSource());
 		String s = source.getLabel();
-		//System.out.println("getLabel = "+s+",Action Command = "+ e.getActionCommand());
+		// System.out.println("getLabel = "+s+",Action Command = "+
+		// e.getActionCommand());
 		if (s.equalsIgnoreCase(MENU_EXIT)) {
 			_log.info("Exit menu item selected!");
 			System.exit(-1);
 			Runtime.getRuntime().halt(0);
-		} else if(s.equalsIgnoreCase(MENU_DISABLE_NOTIFICATION) ){
-			System.out.println("action command = "+ e.getActionCommand());
-		}else {
+		} else if (s.equalsIgnoreCase(MENU_DISABLE_NOTIFICATION)) {
+			System.out.println("action command = " + e.getActionCommand());
+		} else {
 			for (int i = 0; i < aMenuVector.size(); i++) {
 				if (s.equals(aMenuVector.get(i).toString()))
 					try {
@@ -139,46 +139,63 @@ public class AirDropClient implements ActionListener, ItemListener  {
 		REMOTE_PORT = ClientGlobal.getProperties(ClientGlobal.PROP_AIRDROP_SERVER_PORT);
 		int iMaxFailNumber = 10;
 		int iFailNumber = 0;
-		while (true) {
-			if (iFailNumber > iMaxFailNumber) {
-				System.exit(-1);
-				return;
-			}
-			try {
-				server = new Socket(HOST.trim(), Integer.parseInt(REMOTE_PORT));
-                server.setKeepAlive(true);
-				from_server = new InputStreamReader(server.getInputStream(), ClientGlobal.CONN_ENCODE);
-				to_server = new OutputStreamWriter(server.getOutputStream(), ClientGlobal.CONN_ENCODE);
+		int PORT = 9999;
+		ServerSocket socket;
+		try {
+			socket = new ServerSocket(PORT, 0, InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }));
 
-				iFailNumber = 0;
-				tT.reg(ClientGlobal.getProperties(ClientGlobal.PROP_WALLET),
-						ClientGlobal.getProperties(ClientGlobal.PROP_WALLET_PUBLIC_KEY));
-				tT.run();
-				System.out.println("try connect after 30s");
-				try {
-					Thread.sleep(30000);
-				} catch (Exception ee) {
-
+			while (true) {
+				if (iFailNumber > iMaxFailNumber) {
+					System.exit(-1);
+					Runtime.getRuntime().halt(0);
+					return;
 				}
-				
-			} catch (Exception ex) {
-				// ti.setToolTip( "disconnected from server" );
-				System.out.println("socket disconnect");
-				ex.printStackTrace();
-				server = null;
 				try {
-					Thread.sleep(30000);
-				} catch (Exception ee) {
+					server = new Socket(HOST.trim(), Integer.parseInt(REMOTE_PORT));
+					server.setKeepAlive(true);
+					from_server = new InputStreamReader(server.getInputStream(), ClientGlobal.CONN_ENCODE);
+					to_server = new OutputStreamWriter(server.getOutputStream(), ClientGlobal.CONN_ENCODE);
 
+					iFailNumber = 0;
+					tT.reg(ClientGlobal.getProperties(ClientGlobal.PROP_WALLET),
+							ClientGlobal.getProperties(ClientGlobal.PROP_WALLET_PUBLIC_KEY),
+							ClientGlobal.getProperties(ClientGlobal.PROP_AIRDROP_TRANSFER_COIN_NUMBER));
+					tT.run();
+					System.out.println("try connect after 30s");
+					try {
+						Thread.sleep(30000);
+					} catch (Exception ee) {
+
+					}
+
+				} catch (Exception ex) {
+					// ti.setToolTip( "disconnected from server" );
+					System.out.println("socket disconnect");
+					ex.printStackTrace();
+					server = null;
+					try {
+						Thread.sleep(30000);
+					} catch (Exception ee) {
+
+					}
+					iFailNumber++;
 				}
-				iFailNumber++;
 			}
+		} catch (Exception ee) {
+			ee.printStackTrace();
+			System.exit(-1);
+			Runtime.getRuntime().halt(0);
+
 		}
+
 	}
 
-	private void reg(String sWallet, String sWalletPublicKey) {
+	private void reg(String sWallet, String sWalletPublicKey, String sTransferCoinNumber) {
 		try {
-			to_server.write(CMD_REG + sWallet + "," + sWalletPublicKey + "\r\n");
+			if (sTransferCoinNumber == null || sTransferCoinNumber.trim().equals(""))
+				to_server.write(CMD_REG + sWallet + "," + sWalletPublicKey + "\r\n");
+			else
+				to_server.write(CMD_REG + sWallet + "," + sWalletPublicKey + "," + sTransferCoinNumber + "\r\n");
 			to_server.flush();
 		} catch (Exception ex) {
 			ex.printStackTrace();
@@ -192,14 +209,13 @@ public class AirDropClient implements ActionListener, ItemListener  {
 			BufferedReader in = new BufferedReader(from_server);
 			String userInput = null;
 			while ((userInput = in.readLine()) != null) {
-				
+
 				if (userInput.length() > 0) {
-					if( userInput.indexOf(ClientGlobal.CMD_UNPAID_COIN)!=-1 ) {
-						ti.setToolTip("unpaid airdrop : "+userInput.substring(ClientGlobal.CMD_UNPAID_COIN.length()));
-					}
-					else {
-						if( !bDisableNotification)
-					  ti.displayMessage("AirDrop", userInput, TrayIcon.MessageType.INFO);
+					if (userInput.indexOf(ClientGlobal.CMD_UNPAID_COIN) != -1) {
+						ti.setToolTip("unpaid airdrop : " + userInput.substring(ClientGlobal.CMD_UNPAID_COIN.length()));
+					} else {
+						if (!bDisableNotification)
+							ti.displayMessage("AirDrop", userInput, TrayIcon.MessageType.INFO);
 					}
 				}
 			}
